sample-spring/demo-dev/deployment.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  labels:
    app: sample-spring
    app.kubernetes.io/name: sample-spring
  name: sample-spring
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: sample-spring
  strategy:
    blueGreen:
      activeService: sample-spring
      autoPromotionEnabled: true
      autoPromotionSeconds: 60
      # prePromotionAnalysis:
      #   # templates:
      #   #   - templateName: success-rate
      #   templateName: success-rate
      #   args:
      #     - name: namespace
      #       value: demo-dev
      #     - name: service
      #       value: sample-spring-preview
      # previewReplicaCount: 1
      previewService: sample-spring-preview
      # scaleDownDelaySeconds: 30
  template:
    metadata:
      labels:
        app: sample-spring
        app.kubernetes.io/name: sample-spring
        version: v0.3.78
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8081"
    spec:
      containers:
        - image: nalbam/sample-spring:v0.3.78
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: sample-spring
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8081
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 500m
              memory: 1000Mi
            limits:
              cpu: 550m
              memory: 1100Mi
