sample-spring/demo-dev/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    app: sample-spring
    app.kubernetes.io/name: sample-spring
  name: sample-spring
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-issuer"
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: sample-spring-dev.bruce.spic.me
  tls:
    - hosts:
        - sample-spring-dev.bruce.spic.me
      secretName: sample-spring-tls
